feat: update home

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -32,6 +32,8 @@
 @import "components/borders";
 @import "components/line-height";
 @import "components/background";
+@import "components/min-height";
+@import "components/gap";
 
 @import 'layout/navigation';
 @import 'layout/grid';
