--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -34,6 +34,7 @@
 @import "components/background";
 @import "components/min-height";
 @import "components/gap";
+@import "components/padding";
 
 @import 'layout/navigation';
 @import 'layout/grid';
