--- a/scss/components/_text.scss
+++ b/scss/components/_text.scss
@@ -13,13 +13,14 @@ $j: 1,2,3,4,5;
 
 $colors: (
         '000': #000,
-        'FFF': #FFF,
+        '181C32': #181C32,
+        '444241': #444241,
         '999': #999,
+        'FFF': #FFF,
         'F65D4E': #F65D4E,
         'FF0441': #FF0441,
         '966412': #966412,
         '04C5BA': #04C5BA,
-        '444241': #444241,
 );
 @each $name,$value in $colors {
   .text-#{$name} {
