--- a/scss/components/_text.scss
+++ b/scss/components/_text.scss
@@ -15,12 +15,16 @@ $colors: (
         '000': #000,
         '181C32': #181C32,
         '444241': #444241,
+        '444': #444,
         '999': #999,
         'FFF': #FFF,
         'F65D4E': #F65D4E,
         'FF0441': #FF0441,
         '966412': #966412,
         '04C5BA': #04C5BA,
+        '9A96AA': #9A96AA,
+        '4B5563': #4B5563,
+        '2A2928': #2A2928,
 );
 @each $name,$value in $colors {
   .text-#{$name} {
