--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -35,6 +35,7 @@
 @import "components/min-height";
 @import "components/gap";
 @import "components/padding";
+@import "components/divider";
 
 @import 'layout/navigation';
 @import 'layout/grid';
@@ -46,6 +47,8 @@
 @import 'pages/home';
 @import 'pages/about';
 @import 'pages/contact';
+@import "pages/danhmucsach";
+@import "pages/danhmucchitiet";
 
 @import 'themes/theme';
 @import 'themes/admin';
