--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -49,6 +49,7 @@
 @import 'pages/contact';
 @import "pages/danhmucsach";
 @import "pages/danhmucchitiet";
+@import "pages/sachdamua";
 
 @import 'themes/theme';
 @import 'themes/admin';
