--- a/scss/components/_line-height.scss
+++ b/scss/components/_line-height.scss
@@ -4,6 +4,7 @@ $sizes:(
         '125': 1.25,
         '127': 1.2777,
         '128': 1.2857,
+        '133': 1.33333,
         '142': 1.42857,
         '150': 1.50,
         '166': 1.66667,
