--- a/scss/components/_text.scss
+++ b/scss/components/_text.scss
@@ -22,6 +22,7 @@ $colors: (
         'FF0441': #FF0441,
         '966412': #966412,
         '04C5BA': #04C5BA,
+        '0CB0A7': #0CB0A7,
         '9A96AA': #9A96AA,
         '4B5563': #4B5563,
         '2A2928': #2A2928,
