--- a/style.css
+++ b/style.css
@@ -298,6 +298,10 @@
   font-size: 11px;
 }
 
+.fz-12px {
+  font-size: 12px;
+}
+
 .fz-14px, .danhmucchitiet__fillter__sort__btn, .danhmucchitiet__fillter__chude__label, .danhmucchitiet__search__input, .home__banner__btn {
   font-size: 14px;
 }
@@ -403,6 +407,10 @@
 
 .text-04C5BA {
   color: #04c5ba;
+}
+
+.text-0CB0A7 {
+  color: #0cb0a7;
 }
 
 .text-9A96AA, .danhmucchitiet__search__input::placeholder {
@@ -511,6 +519,10 @@
   border-radius: 6px;
 }
 
+.rounded-8px {
+  border-radius: 8px;
+}
+
 .rounded-10px {
   border-radius: 10px;
 }
@@ -545,6 +557,10 @@
 
 .lh-128 {
   line-height: 1.2857;
+}
+
+.lh-133 {
+  line-height: 1.33333;
 }
 
 .lh-142 {
@@ -609,6 +625,14 @@
 
 .bg-966412, .danhmucchitiet__fillter__dinhdang__checkbox:checked ~ .danhmucchitiet__fillter__dinhdang__label {
   background: #966412;
+}
+
+.bg-E5E5E5, .sachdamua__progress {
+  background: #E5E5E5;
+}
+
+.bg-0CB0A7, .sachdamua__progress[value]::-webkit-progress-value {
+  background: #0CB0A7;
 }
 
 .mh-60, .footer__nav__a, .header__navbar .uk-navbar-nav > li > a, .header__navbar .uk-navbar-item, .header__navbar .uk-navbar-toggle {
@@ -975,6 +999,9 @@
   align-items: center;
   justify-content: center;
   padding: 0 12px;
+}
+.sachdamua__progress {
+  height: 4px;
 }
 
 /*# sourceMappingURL=style.css.map */
