--- a/scss/components/_background.scss
+++ b/scss/components/_background.scss
@@ -1,18 +1,20 @@
 $colors: (
-        'EFE7CA': #EFE7CA,
-        'F2F4F6': #F2F4F6,
         '000-FFF': rgba(0, 0, 0, 0.50),
+        'EFE7CA': #EFE7CA,
+        'FFFACC': #FFFACC,
+        'F2F4F6': #F2F4F6,
         'EDEBFC': #EDEBFC,
         'E9F9FD': #E9F9FD,
         'E8F6E1': #E8F6E1,
         'FBF1E6': #FBF1E6,
         'FFF': #FFF,
-        'F65D4E': #F65D4E,
         'F6F6F6': #F6F6F6,
         'F7F7F7': #F7F7F7,
-        '966412': #966412,
         'E5E5E5': #E5E5E5,
+        'F65D4E': #F65D4E,
+        '966412': #966412,
         '0CB0A7': #0CB0A7,
+        'E8FFF3': #E8FFF3,
 );
 @each $name,$value in $colors {
   .bg-#{$name} {
