--- a/scss/components/_text.scss
+++ b/scss/components/_text.scss
@@ -23,6 +23,7 @@ $colors: (
         '966412': #966412,
         '04C5BA': #04C5BA,
         '0CB0A7': #0CB0A7,
+        '50CD89': #50CD89,
         '9A96AA': #9A96AA,
         '4B5563': #4B5563,
         '2A2928': #2A2928,
