--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -52,6 +52,7 @@
 @import "pages/danhmucchitiet";
 @import "pages/sachdamua";
 @import "pages/taikhoan";
+@import "pages/thongtintaikhoan";
 
 @import 'themes/theme';
 @import 'themes/admin';
