--- a/scss/components/_borders.scss
+++ b/scss/components/_borders.scss
@@ -16,3 +16,6 @@ $sizes:(
 .bd-1-E6E6E6{
   border: var(----f1-number-1, 1px) solid var(--200, #E6E6E6);
 }
+.bd-1-DDE5EF{
+  border: var(----f1-number-1, 1px) solid var(--200, #DDE5EF);
+}
