--- a/scss/components/_text.scss
+++ b/scss/components/_text.scss
@@ -13,6 +13,7 @@ $j: 1,2,3,4,5;
 
 $colors: (
         '000': #000,
+        '0C121C': #0C121C,
         '181C32': #181C32,
         '444241': #444241,
         '444': #444,
