--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -53,6 +53,7 @@
 @import "pages/sachdamua";
 @import "pages/taikhoan";
 @import "pages/thongtintaikhoan";
+@import "pages/lichsumuahang";
 
 @import 'themes/theme';
 @import 'themes/admin';
