--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -54,6 +54,7 @@
 @import "pages/taikhoan";
 @import "pages/thongtintaikhoan";
 @import "pages/lichsumuahang";
+@import "pages/timkiemdonhang";
 
 @import 'themes/theme';
 @import 'themes/admin';
