--- a/scss/components/_line-height.scss
+++ b/scss/components/_line-height.scss
@@ -9,6 +9,7 @@ $sizes:(
         '150': 1.50,
         '166': 1.66667,
         '167': 1.67,
+        '171': 1.71429,
 );
 @each $name,$value in $sizes {
   .lh-#{$name}{
