--- a/scss/components/_text.scss
+++ b/scss/components/_text.scss
@@ -16,6 +16,7 @@ $colors: (
         '0C121C': #0C121C,
         '181C32': #181C32,
         '444241': #444241,
+        'C9CDD2': #C9CDD2,
         '444': #444,
         '999': #999,
         'FFF': #FFF,
