--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -55,6 +55,7 @@
 @import "pages/thongtintaikhoan";
 @import "pages/lichsumuahang";
 @import "pages/timkiemdonhang";
+@import "pages/lichsunaptien";
 
 @import 'themes/theme';
 @import 'themes/admin';
