--- a/scss/components/_text.scss
+++ b/scss/components/_text.scss
@@ -13,9 +13,13 @@ $j: 1,2,3,4,5;
 
 $colors: (
         '000': #000,
+        '14081C': #14081C,
+        '514957': #514957,
         '0C121C': #0C121C,
+        '0D1017': #0D1017,
         '181C32': #181C32,
         '444241': #444241,
+        'A1A1A1': #A1A1A1,
         'C9CDD2': #C9CDD2,
         '444': #444,
         '999': #999,
@@ -27,10 +31,12 @@ $colors: (
         '04C5BA': #04C5BA,
         '0CB0A7': #0CB0A7,
         '50CD89': #50CD89,
+        '72C949': #72C949,
         '9A96AA': #9A96AA,
         '4B5563': #4B5563,
         '2A2928': #2A2928,
         '5E5D5A': #5E5D5A,
+        'F1416C': #F1416C,
 );
 @each $name,$value in $colors {
   .text-#{$name} {
