feat: page giohang

--- a/scss/components/_borders.scss
+++ b/scss/components/_borders.scss
@@ -19,3 +19,6 @@ $sizes:(
 .bd-1-DDE5EF{
   border: var(----f1-number-1, 1px) solid var(--200, #DDE5EF);
 }
+.bd-1-E5E5E5{
+  border: var(----f1-number-1, 1px) solid var(--200, #E5E5E5);
+}
