--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -56,6 +56,7 @@
 @import "pages/lichsumuahang";
 @import "pages/timkiemdonhang";
 @import "pages/lichsunaptien";
+@import "pages/giohang";
 
 @import 'themes/theme';
 @import 'themes/admin';
