--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -1,4 +1,24 @@
 .icons {
+  $x:16px;
+  &__#{$x}{
+    width: $x;
+    height: $x;
+    display: flex;
+    background-position: center;
+    background-repeat: no-repeat;
+    &--user{
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='17' height='16' viewBox='0 0 17 16' fill='none'%3E%3Cellipse cx='8.50065' cy='11.6663' rx='4.66667' ry='2.33333' stroke='%23966412' stroke-width='1.5' stroke-linejoin='round'/%3E%3Ccircle cx='8.50065' cy='4.66667' r='2.66667' stroke='%23966412' stroke-width='1.5' stroke-linejoin='round'/%3E%3C/svg%3E");
+    }
+    &--location{
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='17' height='16' viewBox='0 0 17 16' fill='none'%3E%3Cpath d='M14.5 7.25893C14.5 10.5317 10.75 14.6663 8.5 14.6663C6.25 14.6663 2.5 10.5317 2.5 7.25893C2.5 3.98614 5.18629 1.33301 8.5 1.33301C11.8137 1.33301 14.5 3.98614 14.5 7.25893Z' stroke='%23966412' stroke-width='1.5'/%3E%3Cpath d='M10.5 7.33301C10.5 8.43758 9.60457 9.33301 8.5 9.33301C7.39543 9.33301 6.5 8.43758 6.5 7.33301C6.5 6.22844 7.39543 5.33301 8.5 5.33301C9.60457 5.33301 10.5 6.22844 10.5 7.33301Z' stroke='%23966412' stroke-width='1.5'/%3E%3C/svg%3E");
+    }
+    &--plus{
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='17' height='17' viewBox='0 0 17 17' fill='none'%3E%3Cpath d='M8.5 4.04004V12.04M12.5 8.04004L4.5 8.04004' stroke='%2328303F' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+    }
+    &--minus{
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='17' height='17' viewBox='0 0 17 17' fill='none'%3E%3Cpath d='M12.5 8.04004L4.5 8.04004' stroke='%2328303F' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+    }
+  }
   $x:20px;
   &__#{$x}{
     width: $x;
@@ -61,6 +81,9 @@
     }
     &--location-3{
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M21 10.8889C21 15.7981 15.375 22 12 22C8.625 22 3 15.7981 3 10.8889C3 5.97969 7.02944 2 12 2C16.9706 2 21 5.97969 21 10.8889Z' stroke='%2328303F' stroke-width='1.5'/%3E%3Cpath d='M15 11C15 12.6569 13.6569 14 12 14C10.3431 14 9 12.6569 9 11C9 9.34315 10.3431 8 12 8C13.6569 8 15 9.34315 15 11Z' stroke='%2328303F' stroke-width='1.5'/%3E%3C/svg%3E");
+    }
+    &--arrows-right{
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='24' viewBox='0 0 25 24' fill='none'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M10.0315 6.41438C9.70806 6.67313 9.65562 7.1451 9.91438 7.46855L13.5396 12L9.91438 16.5315C9.65562 16.855 9.70806 17.3269 10.0315 17.5857C10.355 17.8444 10.8269 17.792 11.0857 17.4685L15.0857 12.4685C15.3048 12.1946 15.3048 11.8054 15.0857 11.5315L11.0857 6.53151C10.8269 6.20806 10.355 6.15562 10.0315 6.41438Z' fill='%2328303F'/%3E%3C/svg%3E");
     }
   }
 }
