--- a/scss/components/_text.scss
+++ b/scss/components/_text.scss
@@ -37,6 +37,7 @@ $colors: (
         '2A2928': #2A2928,
         '5E5D5A': #5E5D5A,
         'F1416C': #F1416C,
+        '3F4254': #3F4254,
 );
 @each $name,$value in $colors {
   .text-#{$name} {
